--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -979,7 +979,14 @@ a.green{
 
 .list_item li{ 
 	background: #f6f6f6; 
+	border: 1px #ddd solid;
 }
+
+.list_item li.blueSelection{
+	background: #dfe9f3 !important;
+	border: 1px #008fc7 solid;
+}
+
 
 .load{
 	overflow: auto;
@@ -989,7 +996,7 @@ a.green{
 	padding: 5px;
 	color: #000;
 	display: block;
-	border: 1px #ddd solid;
+	/*border: 1px #ddd solid;*/
 	overflow: auto;
 
 	-o-border-radius: 4px;
@@ -999,15 +1006,8 @@ a.green{
     border-radius: 4px;
 }
 
-.clean, a.clean{
-	border: none;
-	display: inherit !important;
-}
 
-.list_item a.selected{
-	background: #dfe9f3 !important;
-	border: 1px #008fc7 solid;
-}
+
 
 
 
