--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -18,7 +18,7 @@ body{
 	overflow: hidden;
 }
 
-#lateral{
+#lateral, #bar{
 	width: 150px;
 	position: absolute;
 	height: auto;
@@ -29,7 +29,15 @@ body{
 	/*border-right: 1px solid #f1f1f1;*/
 	border-right: 1px dotted #008fc7;
 	/*box-shadow: 0 0 5px 1px rgba(0,0,0, .8);*/
+}
 
+#bar{
+	right: 0;
+	border-left: 1px dotted #008fc7;
+}
+
+.task_bar_item{
+	padding: 25px 10px;
 }
 
 .topo{
@@ -39,7 +47,7 @@ body{
 	background: #f1f1f1;
 
 	position: absolute;
-	right: 0;
+	right: 150px;
 	left: 151px;	
 }
 
@@ -68,6 +76,7 @@ body{
     bottom: 0;
     left: 590px;
     right: 0;
+    width: 500px;
     padding: 5px 10px 5px 0;
 }
 
@@ -231,7 +240,6 @@ a{
 	background: #008fc7;
 	color: #fff;
 }
-
 
 .submenu li{
 	padding-left: 15px;
