--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -103,7 +103,7 @@ hr {
 }
 
 a.editar, a.excluir, a.download, a.active, a.preview, a.excluir_todos{ background: transparent url(../../image/admin/editar.png) no-repeat 0 0; width: 12px; height: 20px; text-indent: -5000px; margin:0 5px; display: block;}
-a.excluir{ background: transparent url(../../image/admin/excluir.png) no-repeat 0 0; width: 20px; height: 20px; }
+a.excluir{ background: transparent url(../../image/admin/excluir.png) no-repeat 0 0; width: 20px; height: 20px; text-align: center;}
 a.download{ background: transparent url(../../image/admin/download.png) no-repeat 0 0; }
 a.active{ background: transparent url(../../image/admin/active.png) no-repeat 0 0; }
 a.preview{ background: transparent url(../../image/admin/preview.png) no-repeat 0 0; width: 16px; height: 16px; }
