--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -1403,6 +1403,19 @@ div.jGrowl div.error {
     /*border: none;*/
 }
 
+.form_panel{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 560px;
+	height: auto;
+	padding: 10px;
+	background: #fff url('../../image/admin/bkg.jpg') repeat-x 0 0;
+	z-index: 10;
+	display: none;
+	box-shadow:#333 1px 5px 15px;
+}
+
 /*
 .ui-widget-content{
 	background: none;
