--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -1386,6 +1386,10 @@ a.green{
 	border-top: 1px dotted #CCC;
 }
 
+.description p{
+	margin-bottom: 10px;
+}
+
 .down_button{
 	text-align: center;
 	display: block;
