--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -85,7 +85,7 @@ em, strong{
 #esquerda{
     overflow:hidden;
     position: absolute;
-    min-width: 420px;
+    width: 300px;
     display: none;
     top:46px;
     bottom: 0;
@@ -93,6 +93,7 @@ em, strong{
     border-right: 1px dotted #008fc7;
     /*box-shadow: 2px 2px 2px 1px rgba(0,0,0, .2);*/
     padding: 5px;
+    /*padding-right: 20px;*/
 }
 
 
@@ -102,7 +103,7 @@ em, strong{
     display: none;
     top:46px;
     bottom: 0;
-    left: 590px;
+    left: 470px;
     right: 60px;
     /*width: 515px;*/
     padding: 5px 10px 5px 0;
@@ -116,6 +117,10 @@ em, strong{
     left: 151px;
     right: 60px;
     padding: 5px;
+}
+
+.mCSB_inside .mCSB_container{
+	margin-right: 20px !important
 }
 
 .wordwrap {
@@ -137,7 +142,7 @@ hr {
     font-style: bold;
 }
 
-a.editar, a.excluir, a.download, a.active, a.preview, a.excluir_todos{ background: transparent url(../../image/admin/editar.png) no-repeat 0 0; width: 12px; height: 20px; text-indent: -5000px; margin:0 5px; display: block;}
+a.editar, a.excluir, a.download, a.active, a.preview, a.excluir_todos{ background: transparent url(../../image/admin/editar.png) no-repeat 0 0; width: 12px; height: 20px; text-indent: -5000px; display: block;}
 a.excluir{ 
 	background: transparent url(../../image/admin/excluir.png) no-repeat 0 0; 
 	width: 20px; height: 20px; 
@@ -478,13 +483,14 @@ a{
 }
 
 #esquerda .scrollable_content{
-    width: 418px;
+    width: auto;
 }
 
 
 
 .fixed{
 	position: fixed;
+
 }
 
 
@@ -1064,7 +1070,8 @@ a.green{
 	padding: 5px;
 	margin-bottom: 5px;
 	border: 1px solid #008fc7;
-	min-width: 400px;	
+	display: inline-block;
+	/*min-width: 400px;	*/
 	width: auto;
 	display: inline-block;
 	position: relative;
@@ -1085,12 +1092,15 @@ a.green{
 	padding: 5px;
 }
 
+.list_item{
+	width: auto;
+}
+
 .list_item li, .dd-item{
 	margin: 5px 0;
 	background: #fff; 
 	overflow: auto;
-	
-	/*min-width: 370px;*/
+	width: auto !important;
 	line-height: normal !important;
 
 	-o-border-radius: 4px;
@@ -1098,11 +1108,6 @@ a.green{
     -webkit-border-radius: 4px;
     -khtml-border-radius: 4px;
     border-radius: 4px;
-}
-
-
-.list_item li p, .list_body-list li p{
-	/*line-height: 20px;*/
 }
 
 
@@ -1129,14 +1134,6 @@ a.green{
 .list_item a{
 	color: #000;
 	display: block;
-	/*border: 1px #ddd solid;*/
-	overflow: auto;
-
-	-o-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
 }
 
 
@@ -1204,7 +1201,6 @@ a.green{
 
 .filter_panel{
 	position: absolute;
-	z-index: 10000;
 	background: #ccc;
 	display: none;
 	left: 0;
@@ -1217,7 +1213,7 @@ a.green{
 	
 	overflow-y: auto;
 	overflow-x: hidden; 
-	z-index: 20000;
+	z-index: 2;
 }
 
 .filter .scrollable_content{
@@ -1457,7 +1453,7 @@ div.jGrowl div.error {
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	width: 560px;
+	width: 430px;
 	height: auto;
 	padding: 10px;
 	background: #fff url('../../image/admin/bkg.jpg') repeat-x 0 0;
