--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -819,12 +819,23 @@ label
 */
 
 
-#sortable .ui-state-highlight{
+#sortable .ui-state-highlight, #sortable_workflow .ui-state-highlight{
 	margin: 5px 0; 
 	padding: 0; 
 	min-height: 70px; 
 	background: #f2fbff; 
 	border: 1px dashed #b6bcbf;
+}
+
+#sortable_workflow .ui-state-highlight{
+	min-height: 30px; 
+}
+
+.connect{
+	min-width: 250px;
+	min-height: 30px;
+	border: 1px dotted #ccc;
+	padding: 0 5px;
 }
 
 
